2006-09-07  Nathaniel Smith  <njs@pobox.com>

	* tests/basic_invocation_and_options: Fix test broken by
	usage to stdout vs. stderr changes.

2006-09-07  Nathaniel Smith  <njs@pobox.com>

	* contrib/monotone.el (monotone-vc-prefix-map): Add some more
	intuitive keys, and some more notes on FIXMEs.

2006-09-07  Nathaniel Smith  <njs@pobox.com>

	* numeric_vocab.hh (widen): Add a comment documenting what widen<>
	is for.  Add a fast-path to it for when V is unsigned anyway.
	Throw in some static stdint-actually-works tests too, while I'm,
	here.
	* numeric_vocab.cc, unit_tests.{hh,cc}: Add tests for widen.

2006-09-07  Grahame Bowland  <grahame@angrygoats.net>

	* monotone.texi: add *-merge documentation sourced 
	from mailing list archives (new entry under "Special 
	"Topics").

2006-09-07  Richard Levitte  <richard@levitte.org>

	* revision.cc: It's really rosters, not revisions that are
	regenerated.
	* po/sv.po: Clear the resulting fuzzy.

2006-09-07  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 3 fuzzies.

2006-09-07  Grahame Bowland  <grahame@angrygoats.net>

	* automate.cc (get_content_changed, get_corresponding_path)
	add new functions, allowing determinination of last content 
	change and also filenames between revisions.
	* monotone.texi: document new automate commands
	* monotone.texi: document new automate commands
	  tests/automate_get_content_changed,
	  tests/automate_get_corresponding_path,
	  tests/automate_get_content_changed/__driver__.lua,
	  tests/automate_get_content_changed/expected,
	  tests/automate_get_corresponding_path/__driver__.lua,
	  tests/automate_get_corresponding_path/expected,
	  tests/automate_get_corresponding_path/expected2A:
	  test new automate commands
	* testsuite.lua: call automate_get_content_changed, 
	  automate_get_corresponding_path tests.

2006-09-07  Nathaniel Smith  <njs@pobox.com>

	* monotone.cc (cpp_main): Send usage text to stderr if there was
	an error, but stdout if it was requested with --help.